tests/ValidProofs/disjE.fitch
|x ∨ y
|x → z
|y → z
|---
||x
||---
||z (→E) 2,4
||y
||---
||z (→E) 3,6
|z (∨E) 1, 4-5, 6-7