tests/InvalidRules/disjE%6.fitch
|P(x) ∨ Q(x)
|---
||P(x)
||---
||⊤ (⊤I)
||P(x)
||---
||⊤ (⊤I)
|⊤ (∨E) 1, 2-3, 4-5
